--- a/index.html
+++ b/index.html
@@ -11,55 +11,57 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-<div class="contiener-parents">
-  <div class="contianer-text">
-    <h3 class="text">Sayohat haqidagi eng qiziq
-bloglarni kuzatib boring.</h3>
-  <div class="blog-text">
-    <span class="bg-icon">TOP BLOGLAR</span>
+<div class="cont">
+  <div class="contiener-parents">
+    <div class="contianer-text">
+      <h3 class="text">Sayohat haqidagi eng qiziq
+  bloglarni kuzatib boring.</h3>
+    <div class="blog-text">
+      <span class="bg-icon">TOP BLOGLAR</span>
+    </div>
+    </div>
   </div>
-  </div>
+  <!--Yon tomon-->
+    <div class="yontomon">
+      <h2 class="text qq">Eng so'nggi vidiolar</h2>
+      <hr class="chiziq">
+      <div class="img-text-uch">
+        <div class="yon-img">
+          <img src="img/uy.png" alt="uy surati" class="mal-img">
+          <div class="bn">
+            <h3 class="text nm">O’rmonda uchburchaksimon uy qurdik</h3>
+            <div class="time-text-icon">
+              <span class="vaqt">1 hafta oldin</span>
+              <span class="prasmotr">873 ming</span>
+            </div>
+          </div>
+        </div>
+        <!--2-->
+        <div class="yon-img">
+          <img src="img/daryo.png" alt="uy surati" class="mal-img">
+          <div class="bn">
+            <h3 class="text nm">Sibirliklarning qoldirib ketilgan uychalari</h3>
+            <div class="time-text-icon">
+              <span class="vaqt">3 hafta oldin</span>
+              <span class="prasmotr">819 ming</span>
+            </div>
+          </div>
+        </div>
+        <div class="yon-img">
+          <img src="img/tabiatman.png" alt="uy surati" class="mal-img">
+          <div class="bn">
+            <h3 class="text nm">Yer-uyida mallarang kuchugim bilan tunab qoldik</h3>
+            <div class="time-text-icon">
+              <span class="vaqt">1 oy oldin</span>
+              <span class="prasmotr">3.9 million</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tugma">
+        <a href="#" class="tugma-b">Yana yuklash</a>
+      </div>
+    </div>
 </div>
-<!--Yon tomon-->
-  <div class="yontomon">
-    <h2 class="text qq">Eng so'nggi vidiolar</h2>
-    <hr class="chiziq">
-    <div class="img-text-uch">
-      <div class="yon-img">
-        <img src="img/uy.png" alt="uy surati" class="mal-img">
-        <div class="bn">
-          <h3 class="text nm">O’rmonda uchburchaksimon uy qurdik</h3>
-          <div class="time-text-icon">
-            <span class="vaqt">1 hafta oldin</span>
-            <span class="prasmotr">873 ming</span>
-          </div>
-        </div>
-      </div>
-      <!--2-->
-      <div class="yon-img">
-        <img src="img/daryo.png" alt="uy surati" class="mal-img">
-        <div class="bn">
-          <h3 class="text nm">Sibirliklarning qoldirib ketilgan uychalari</h3>
-          <div class="time-text-icon">
-            <span class="vaqt">3 hafta oldin</span>
-            <span class="prasmotr">819 ming</span>
-          </div>
-        </div>
-      </div>
-      <div class="yon-img">
-        <img src="img/tabiatman.png" alt="uy surati" class="mal-img">
-        <div class="bn">
-          <h3 class="text nm">Yer-uyida mallarang kuchugim bilan tunab qoldik</h3>
-          <div class="time-text-icon">
-            <span class="vaqt">1 oy oldin</span>
-            <span class="prasmotr">3.9 million</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="tugma">
-      <a href="#" class="tugma-b">Yana yuklash</a>
-    </div>
-  </div>
 </body>
 </html>
